Adding normalize & responsive variables

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-h1{color:#9356dc}/*# sourceMappingURL=style.css.map */
+header{box-shadow:0 .2rem .7rem rgba(0,0,0,.15)}/*# sourceMappingURL=style.css.map */
