--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,6 @@
-$primary:#9356DC;
-$secondary:#FF79DA;
-$tertiary:#99E2D0;
+@import "./utils/variables";
+@import "./utils/responsive";
 
-$logotitlefont:'Shrikhand', cursive;
-$mainfont:'Roboto', sans-serif;
-
-h1{
-    color: $primary;
+header{
+    box-shadow: $box-shadow;
 }
