--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,3 +7,6 @@ $logotitlefont:'Shrikhand', cursive;
 $mainfont:'Roboto', sans-serif;
 
 $box-shadow: 0 0.2rem 0.7rem rgba($black, 0.15) !default;
+
+$margin:1rem;
+$padding:1rem;
