--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
+* {
+  font-family: "Roboto", sans-serif;
+}
+
 header {
-  box-shadow: 0 0.2rem 0.7rem rgba(0, 0, 0, 0.15);
   padding: 1rem;
   display: flex;
   justify-content: center;
@@ -8,10 +11,48 @@ header .arrow-display {
   display: none;
 }
 
-.section-1_search {
+.section-1 {
+  box-shadow: inset 0 0.2rem 0.3rem rgba(0, 0, 0, 0.15);
   display: flex;
   justify-content: center;
+  padding: 1rem;
+  background-color: #eaeaea;
+}
+.section-1 input {
+  border: none;
+  background-color: transparent;
+}
+.section-1 ::placeholder {
+  color: #000;
+  text-align: center;
+}
+
+.section-2 {
+  height: auto;
+  padding: 1rem;
   margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section-2 h2 {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 900;
+  margin: 1rem;
+}
+.section-2 p {
+  text-align: center;
+  font-weight: 300;
+  margin: 0.5rem;
+}
+.section-2 button {
+  border-radius: 2rem;
+  padding: 1rem;
+  margin: 1.5rem;
+  border: none;
+  background: linear-gradient(173deg, #FF79DA, #9356DC);
+  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
