--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,11 +2,17 @@ $primary:#9356DC;
 $secondary:#FF79DA;
 $tertiary:#99E2D0;
 $black: #000 !default;
+$grey: #eaeaea;
+$light-grey: #f6f6f6;
+$dark-grey:#353535;
+$hover-fonction-buttons: #f5edff;
 
 $logotitlefont:'Shrikhand', cursive;
 $mainfont:'Roboto', sans-serif;
 
-$box-shadow: 0 0.2rem 0.7rem rgba($black, 0.15) !default;
+$box-shadow: inset 0 0.2rem 0.3rem rgb(0 0 0 / 15%)!default;
 
 $margin:1rem;
 $padding:1rem;
+
+$background-button:linear-gradient(173deg, $secondary,$primary);
