--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,12 +5,13 @@ $black: #000 !default;
 $grey: #eaeaea;
 $light-grey: #f6f6f6;
 $dark-grey:#353535;
+$grey-icons: #7e7e7e;
 $hover-fonction-buttons: #f5edff;
 
 $logotitlefont:'Shrikhand', cursive;
 $mainfont:'Roboto', sans-serif;
 
-$box-shadow: inset 0 0.2rem 0.3rem rgb(0 0 0 / 15%)!default;
+$box-shadow: 0 0.2rem 0.3rem rgb(0 0 0 / 30%)!default;
 
 $margin:1rem;
 $padding:1rem;
