--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header .arrow-display {
 }
 
 .section-1 {
-  box-shadow: inset 0 0.2rem 0.3rem rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: center;
   padding: 1rem;
@@ -28,9 +28,9 @@ header .arrow-display {
 }
 
 .section-2 {
+  background-color: #f6f6f6;
   height: auto;
-  padding: 1rem;
-  margin: 1rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,6 +53,55 @@ header .arrow-display {
   border: none;
   background: linear-gradient(173deg, #FF79DA, #9356DC);
   color: white;
+  box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
+}
+
+.section-3 {
+  margin: 1rem;
+}
+.section-3 i {
+  color: #7e7e7e;
+  margin: 0 1.25rem;
+  font-size: 1.2rem;
+}
+.section-3 h3 {
+  font-size: 1.5rem;
+}
+.section-3 .numbered-list {
+  counter-reset: li;
+  list-style-type: none;
+  font-size: 0.9rem;
+  line-height: 1.5rem;
+  padding-inline-start: 0;
+}
+.section-3 .numbered-list li {
+  position: relative;
+}
+.section-3 .numbered-list li:before {
+  content: counter(li);
+  counter-increment: li;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+  color: white;
+  background-color: #9356DC;
+  text-align: center;
+  position: absolute;
+  left: -0.2rem;
+  top: 1.5rem;
+}
+.section-3 button {
+  margin: 1rem 0 1.5rem 0.5rem;
+  width: 95%;
+  border: none;
+  background-color: #f6f6f6;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
+  font-size: 1rem;
+  font-weight: 600;
+  display: flex;
+  justify-content: flex-start;
 }
 
 /*# sourceMappingURL=style.css.map */
