--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,7 +18,7 @@ header{
 }
 
 .section-1{
-    box-shadow: $box-shadow;
+    box-shadow: inset $box-shadow;
     display: flex;
     justify-content: center;
     padding: $padding;
@@ -34,9 +34,9 @@ header{
 }
 
 .section-2{
+    background-color: $light-grey;
     height: auto;
-    padding: $padding;
-    margin: $margin;
+    padding: $padding*2;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -53,5 +53,54 @@ header{
     }
     & button{
         @include pink-button;
+    }
+}
+  
+.section-3{
+    margin: $margin;
+    & i{
+        color: $grey-icons;
+        margin: 0 $margin*1.25;
+        font-size: 1.2rem;
+    }
+    & h3{
+        font-size: 1.5rem;
+    }
+    & .numbered-list{
+        counter-reset: li;
+        list-style-type: none;
+        font-size: 0.9rem;
+        line-height: 1.5rem;
+        padding-inline-start: 0;
+        & li {
+            position: relative;   
+            &:before {
+                content: counter(li);
+                counter-increment: li;
+                height: 1.5rem;
+                width: 1.5rem;
+                border-radius: 50%;
+                color: white;
+                background-color: $primary;
+                text-align: center;
+                position: absolute;      
+                left: -0.2rem;
+                top: 1.5rem;
+            }
+        }
+    }
+
+    & button{
+        margin: 1rem 0 1.5rem 0.5rem;
+        width: 95%;
+        border:none;
+        background-color: $light-grey;
+        padding: $padding*1.5;
+        border-radius: 1rem;
+        box-shadow: $box-shadow;
+        font-size: 1rem;
+        font-weight: 600;
+        display: flex;
+        justify-content: flex-start;    
     }
 }
