--- a/css/style.css
+++ b/css/style.css
@@ -104,4 +104,77 @@ header .arrow-display {
   justify-content: flex-start;
 }
 
+.section-4 {
+  background-color: #f6f6f6;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+.section-4 h3 {
+  margin: 2rem 0 0.5rem;
+  font-size: 1.5rem;
+}
+.section-4 .cards {
+  background-color: white;
+  height: fit-content;
+  margin: 1rem 0;
+  border-radius: 1rem;
+  box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
+}
+.section-4 .cards a {
+  text-decoration: none;
+  color: #000;
+}
+.section-4 .cards .new-tag {
+  position: absolute;
+  right: 1rem;
+  background-color: #99E2D0;
+  color: #32b091;
+  font-weight: 900;
+  line-height: 0.3rem;
+  padding: 0 1rem;
+  margin: 1rem;
+  border-radius: 0.2rem;
+}
+.section-4 .cards img {
+  width: 100%;
+  height: 12rem;
+  object-fit: cover;
+  border-radius: 1rem 1rem 0 0;
+}
+.section-4 .cards__text {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1rem;
+}
+.section-4 .cards__text h4 {
+  margin: 0;
+  font-weight: 900;
+  font-size: 1rem;
+}
+.section-4 .cards__text p {
+  margin: 0.5rem 0;
+}
+.section-4 .cards__text i {
+  font-size: 1.8rem;
+  color: #7e7e7e;
+  padding: 0.5rem;
+}
+
+footer {
+  background-color: #353535;
+  padding: 2rem;
+}
+footer img {
+  filter: invert(100%);
+  width: 30%;
+}
+footer ul {
+  list-style-type: none;
+  color: white;
+  line-height: 2rem;
+  padding: 0;
+}
+
 /*# sourceMappingURL=style.css.map */
