--- a/sass/style.scss
+++ b/sass/style.scss
@@ -104,3 +104,76 @@ header{
         justify-content: flex-start;    
     }
 }
+
+.section-4{
+    background-color: $light-grey;
+    padding: $padding;
+    display: flex;
+    flex-direction: column;
+    & h3{
+        margin: 2rem 0 0.5rem;
+        font-size: 1.5rem;
+    }
+    & .cards{
+        background-color: white;
+        height: fit-content;
+        margin: $margin 0;
+        border-radius: 1rem;
+        box-shadow: $box-shadow;
+        & a {
+            text-decoration: none;
+            color: $black;
+        }
+        & .new-tag{
+            position: absolute;
+            right: 1rem;
+            background-color: $tertiary;
+            color: darken($color: $tertiary, $amount: 30%);
+            font-weight: 900;
+            line-height: 0.3rem;
+            padding: 0 $padding;
+            margin: $margin;
+            border-radius: 0.2rem;
+        }
+        & img{
+            width: 100%;
+            height: 12rem;
+            object-fit: cover;
+            border-radius: 1rem 1rem 0 0;
+        }
+        &__text{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 1rem;
+            & h4{
+                margin: 0;
+                font-weight: 900;
+                font-size: 1rem;
+            }
+            & p {
+                margin: 0.5rem 0;
+            }
+            & i{
+                font-size: 1.8rem;
+                color: $grey-icons;
+                padding: 0.5rem;
+            }
+        }
+    }
+}
+
+footer{
+    background-color: $dark-grey;
+    padding: $padding*2;
+    & img{
+        filter: invert(100%);
+        width: 30%;
+    }
+    & ul{
+        list-style-type: none;
+        color: white;
+        line-height: 2rem;
+        padding: 0;
+    }
+}
