--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,179 +1,11 @@
 @import "./utils/variables";
 @import "./utils/responsive";
 @import "./utils/mixins";
+@import "./pages/header";
+@import "./pages/main";
+@import "./pages/footer";
+@import "./pages/restaurants-pages";
 
 *{
     font-family: $mainfont;
-}
-
-header{
-    padding: $padding;
-    display: flex;
-    justify-content: center;
-
-    // hiding arrow main page
-    & .arrow-display{
-        display: none;
-    }
-}
-
-.section-1{
-    box-shadow: inset $box-shadow;
-    display: flex;
-    justify-content: center;
-    padding: $padding;
-    background-color: $grey;
-    & input{
-        border: none;
-        background-color: transparent;
-    }
-    & ::placeholder{
-        color: $black;
-        text-align: center;
-    }
-}
-
-.section-2{
-    background-color: $light-grey;
-    height: auto;
-    padding: $padding*2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    & h2{
-        text-align: center;
-        font-size: 1.5rem;
-        font-weight: 900;
-        margin: $margin;
-    }
-    & p{
-        text-align: center;
-        font-weight: 300;
-        margin: $margin/2;
-    }
-    & button{
-        @include pink-button;
-    }
-}
-  
-.section-3{
-    margin: $margin;
-    & i{
-        color: $grey-icons;
-        margin: 0 $margin*1.25;
-        font-size: 1.2rem;
-    }
-    & h3{
-        font-size: 1.5rem;
-    }
-    & .numbered-list{
-        counter-reset: li;
-        list-style-type: none;
-        font-size: 0.9rem;
-        line-height: 1.5rem;
-        padding-inline-start: 0;
-        & li {
-            position: relative;   
-            &:before {
-                content: counter(li);
-                counter-increment: li;
-                height: 1.5rem;
-                width: 1.5rem;
-                border-radius: 50%;
-                color: white;
-                background-color: $primary;
-                text-align: center;
-                position: absolute;      
-                left: -0.2rem;
-                top: 1.5rem;
-            }
-        }
-    }
-
-    & button{
-        margin: 1rem 0 1.5rem 0.5rem;
-        width: 95%;
-        border:none;
-        background-color: $light-grey;
-        padding: $padding*1.5;
-        border-radius: 1rem;
-        box-shadow: $box-shadow;
-        font-size: 1rem;
-        font-weight: 600;
-        display: flex;
-        justify-content: flex-start;    
-    }
-}
-
-.section-4{
-    background-color: $light-grey;
-    padding: $padding;
-    display: flex;
-    flex-direction: column;
-    & h3{
-        margin: 2rem 0 0.5rem;
-        font-size: 1.5rem;
-    }
-    & .cards{
-        background-color: white;
-        height: fit-content;
-        margin: $margin 0;
-        border-radius: 1rem;
-        box-shadow: $box-shadow;
-        & a {
-            text-decoration: none;
-            color: $black;
-        }
-        & .new-tag{
-            position: absolute;
-            right: 1rem;
-            background-color: $tertiary;
-            color: darken($color: $tertiary, $amount: 30%);
-            font-weight: 900;
-            line-height: 0.3rem;
-            padding: 0 $padding;
-            margin: $margin;
-            border-radius: 0.2rem;
-        }
-        & img{
-            width: 100%;
-            height: 12rem;
-            object-fit: cover;
-            border-radius: 1rem 1rem 0 0;
-        }
-        &__text{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            padding: 1rem;
-            & h4{
-                margin: 0;
-                font-weight: 900;
-                font-size: 1rem;
-            }
-            & p {
-                margin: 0.5rem 0;
-            }
-            & i{
-                font-size: 1.8rem;
-                color: $grey-icons;
-                padding: 0.5rem;
-            }
-        }
-    }
-}
-
-footer{
-    background-color: $dark-grey;
-    padding: $padding*2;
-    & img{
-        filter: invert(100%);
-        width: 30%;
-    }
-    & ul{
-        list-style-type: none;
-        color: white;
-        line-height: 2rem;
-        padding: 0;
-    }
 }
