--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin pink-button {
     border-radius: 2rem;
-    padding: 1rem;
+    padding: $padding $padding*2;
     margin: 1.5rem;
     border: none;
     background: $background-button;
