--- a/sass/pages/_restaurants-pages.scss
+++ b/sass/pages/_restaurants-pages.scss
@@ -56,6 +56,10 @@ article{
             align-items: center;
             height: 5rem;
             margin: $margin 0;
+            position: relative;
+            &::before{
+                @include dishes-check;
+            }
             & p{
                 padding-right: $padding;
             }
