--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -9,7 +9,10 @@
 }
 
 @mixin dishes-check {
-    
+    content: "\f058";
+    position: absolute;
+    font-family: FontAwesome;
+    right: 0;
 }
 
-// <i class="fas fa-check-circle"></i>
+// <i class="fas fa-check-circle">f058</i>
