--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,6 @@ header {
   display: flex;
   justify-content: center;
 }
-header .arrow-display {
-  display: none;
-}
 
 .section-1 {
   box-shadow: inset 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
@@ -48,7 +45,7 @@ header .arrow-display {
   margin: 1.5rem;
   border: none;
   background: linear-gradient(173deg, #FF79DA, #9356DC);
-  color: white;
+  color: #fff;
   box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
 }
 
@@ -79,7 +76,7 @@ header .arrow-display {
   height: 1.5rem;
   width: 1.5rem;
   border-radius: 50%;
-  color: white;
+  color: #fff;
   background-color: #9356DC;
   text-align: center;
   position: absolute;
@@ -111,7 +108,7 @@ header .arrow-display {
   font-size: 1.5rem;
 }
 .section-4 .cards {
-  background-color: white;
+  background-color: #fff;
   height: fit-content;
   margin: 1rem 0;
   border-radius: 1rem;
@@ -168,7 +165,7 @@ footer img {
 }
 footer ul {
   list-style-type: none;
-  color: white;
+  color: #fff;
   line-height: 2rem;
   padding: 0;
 }
@@ -177,7 +174,7 @@ footer ul i {
 }
 footer p {
   font-family: "Shrikhand", cursive;
-  color: white;
+  color: #fff;
   margin: 0 0 1rem;
   font-size: 1.2rem;
 }
@@ -237,7 +234,7 @@ article .menu h2::before {
   top: 4.3rem;
 }
 article .menu__dishcard {
-  background-color: white;
+  background-color: #fff;
   border-radius: 1rem;
   box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
   display: flex;
@@ -247,12 +244,7 @@ article .menu__dishcard {
   height: 5rem;
   margin: 1rem 0;
   position: relative;
-}
-article .menu__dishcard::before {
-  content: "\f058";
-  position: absolute;
-  font-family: FontAwesome;
-  right: 0;
+  overflow: hidden;
 }
 article .menu__dishcard p {
   padding-right: 1rem;
@@ -272,6 +264,30 @@ article .menu__dishcard .dishcard-text p {
   text-overflow: ellipsis;
   overflow: hidden;
 }
+article .menu__dishcard .dishcard-text .dishcard-check {
+  background-color: #99E2D0;
+  width: 25%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: -25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 330ms ease-in-out;
+}
+article .menu__dishcard .dishcard-text .dishcard-check i {
+  color: #99E2D0;
+  background-color: #fff;
+  height: 1.8rem;
+  width: 1.8rem;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 1.8rem;
+}
+article .menu__dishcard .dishcard-text .dishcard-check :hover {
+  transform: translateX(-100%);
+}
 article .button-restaurant {
   display: flex;
   width: 100%;
@@ -284,7 +300,7 @@ article .button-restaurant button {
   margin: 1.5rem;
   border: none;
   background: linear-gradient(173deg, #FF79DA, #9356DC);
-  color: white;
+  color: #fff;
   box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
 }
 
@@ -295,6 +311,10 @@ aside > img {
 
 * {
   font-family: "Roboto", sans-serif;
+}
+
+.display-none {
+  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
