--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -61,7 +61,7 @@
                 height: 1.5rem;
                 width: 1.5rem;
                 border-radius: 50%;
-                color: white;
+                color: #fff;
                 background-color: $primary;
                 text-align: center;
                 position: absolute;      
@@ -96,7 +96,7 @@
         font-size: 1.5rem;
     }
     & .cards{
-        background-color: white;
+        background-color: #fff;
         height: fit-content;
         margin: $margin 0;
         border-radius: 1rem;
