--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 header {
   padding: 1rem;
   display: flex;
@@ -172,6 +173,10 @@ footer ul {
 footer ul i {
   width: 1.8rem;
 }
+footer ul a {
+  text-decoration: none;
+  color: #FFF;
+}
 footer p {
   font-family: "Shrikhand", cursive;
   color: #fff;
@@ -264,18 +269,19 @@ article .menu__dishcard .dishcard-text p {
   text-overflow: ellipsis;
   overflow: hidden;
 }
-article .menu__dishcard .dishcard-text .dishcard-check {
+article .menu__dishcard .dishcard-check {
   background-color: #99E2D0;
   width: 25%;
   height: 100%;
   position: absolute;
   top: 0;
-  right: -25%;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  transform: translateX(100%);
 }
-article .menu__dishcard .dishcard-text .dishcard-check i {
+article .menu__dishcard .dishcard-check i {
   color: #99E2D0;
   background-color: #fff;
   height: 1.8rem;
@@ -283,9 +289,16 @@ article .menu__dishcard .dishcard-text .dishcard-check i {
   border-radius: 50%;
   text-align: center;
   line-height: 1.8rem;
+  transform: rotate(0°);
 }
-article .menu__dishcard :hover > .dishcard-check {
-  right: 0;
+article .menu :hover > .dishcard-check {
+  transform-origin: 100% 0;
+  transform: translateX(0);
+  transition: transform 400ms ease-in-out;
+}
+article .menu :hover > .dishcard-check > i {
+  transform: rotate(360°);
+  transition: transform 400ms ease-in-out;
 }
 article .button-restaurant {
   display: flex;
