--- a/sass/pages/_footer.scss
+++ b/sass/pages/_footer.scss
@@ -13,7 +13,12 @@ footer{
             & i {
                 width: 1.8rem;
             }
+            & a{
+                text-decoration: none;
+                color: #FFF;
+            }
     }
+
     & p{
         font-family: $logotitlefont;
         color: #fff;
