--- a/sass/pages/_restaurants-pages.scss
+++ b/sass/pages/_restaurants-pages.scss
@@ -100,17 +100,17 @@ article{
                     border-radius: 50%;
                     text-align: center;    
                     line-height: 1.8rem;
-                    transform: rotate(0°);
+                    transform: rotate(360deg);
                 }
             }
         }
         & :hover > .dishcard-check{
             transform-origin: 100% 0;
             transform: translateX(0);
-            transition: transform 400ms ease-in-out;
+            transition: transform 600ms ease-in-out;
             & > i{
-                transform: rotate(360°);
-                transition: transform 400ms ease-in-out;
+                transform: rotate(0deg);
+                transition: transform 600ms ease-in-out;
             }
         }
     }
