Adding pink button hover effect

--- a/sass/pages/_restaurants-pages.scss
+++ b/sass/pages/_restaurants-pages.scss
@@ -121,6 +121,9 @@ article{
         margin-bottom: $margin*2;
         & button{
             @include pink-button;
+            &:hover{
+                --x:100%;
+            }
         }
     }
 }
