--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,13 @@ header {
   padding: 1rem 2rem;
   margin: 1.5rem;
   border: none;
-  background: linear-gradient(173deg, #FF79DA, #9356DC);
+  background: linear-gradient(-90deg, var(--c1, #ffdff6), var(--c2, #9356DC) 50%, var(--c1, #FF79DA)) var(--x, 0)/200%;
   color: #fff;
   box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
+  transition: 300ms;
+}
+.section-2 button:hover {
+  --x:100%;
 }
 
 .section-3 {
@@ -310,9 +314,13 @@ article .button-restaurant button {
   padding: 1rem 2rem;
   margin: 1.5rem;
   border: none;
-  background: linear-gradient(173deg, #FF79DA, #9356DC);
+  background: linear-gradient(-90deg, var(--c1, #ffdff6), var(--c2, #9356DC) 50%, var(--c1, #FF79DA)) var(--x, 0)/200%;
   color: #fff;
   box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
+  transition: 300ms;
+}
+article .button-restaurant button:hover {
+  --x:100%;
 }
 
 aside > img {
