--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -34,6 +34,9 @@
     }
     & button{
         @include pink-button;
+        &:hover{
+            --x:100%;
+        }
     }
 }
   
@@ -82,7 +85,7 @@
         font-size: 1rem;
         font-weight: 600;
         display: flex;
-        justify-content: flex-start;    
+        justify-content: flex-start;
     }
 }
 
