--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -16,4 +16,4 @@ $box-shadow: 0 0.2rem 0.3rem rgb(0 0 0 / 30%)!default;
 $margin:1rem;
 $padding:1rem;
 
-$background-button:linear-gradient(173deg, $secondary,$primary);
+$background-button: linear-gradient(-90deg, var(--c1, lighten($secondary, 20%)), var(--c2, $primary) 50%, var(--c1, $secondary)) var(--x, 0)/ 200%;
