--- a/sass/pages/_restaurants-pages.scss
+++ b/sass/pages/_restaurants-pages.scss
@@ -123,6 +123,7 @@ article{
             @include pink-button;
             &:hover{
                 --x:100%;
+                color: $black;
             }
         }
     }
@@ -131,4 +132,49 @@ article{
 aside>img{
     width: 100%;
     object-fit: cover;
+}
+
+@keyframes progress-bar{
+    0% {
+        transform: scaleX(0);
+    }
+    17% {
+        transform: scaleX(.18);
+    }
+    24% {
+        transform: scaleX(.40);
+        animation-timing-function: cubic-bezier(.9,0,.1,1);
+    }
+    46% {
+        transform: scaleX(.81);
+        animation-timing-function: cubic-bezier(.25,0.25,1);
+    }
+    100% {
+        transform: scaleX(1);
+    }
+}
+
+@keyframes progress-after{
+    0% {
+        transform: translateX(-9999px);
+    }
+    100% {
+        transform: translateX(0);
+        }
+    }
+
+$prog-bar-dur: 1000ms;
+$prog-bar-delay: 150ms;
+$progress-after-delay: $prog-bar-dur + $prog-bar-delay*2;
+
+.progress {
+    &__bar {
+        transform-origin: left;
+        transform: scaleX(0.5);
+        animation: progress-bar $prog-bar-dur $prog-bar-delay both;
+    }
+}
+
+.progress-after {
+    animation: progress-after 0ms $progress-after-delay both;
 }
