--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ header {
   padding: 1rem 2rem;
   margin: 1.5rem;
   border: none;
-  background: linear-gradient(-90deg, var(--c1, #ffdff6), var(--c2, #9356DC) 50%, var(--c1, #FF79DA)) var(--x, 0)/200%;
+  background: linear-gradient(329deg, var(--c1, #ffdff6), var(--c2, #9356DC) 70%, var(--c1, #FF79DA)) var(--x, 0)/400%;
   color: #fff;
   box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
   transition: 300ms;
@@ -187,6 +187,52 @@ footer p {
   font-size: 1.2rem;
 }
 
+@keyframes progress-bar {
+  0% {
+    transform: scaleX(0);
+  }
+  17% {
+    transform: scaleX(0.18);
+  }
+  24% {
+    transform: scaleX(0.4);
+    animation-timing-function: cubic-bezier(0.9, 0, 0.1, 1);
+  }
+  46% {
+    transform: scaleX(0.81);
+    animation-timing-function: cubic-bezier(0.25, 0.25, 1);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+@keyframes progress-after {
+  0% {
+    transform: translateX(-9999px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+.progress__bar {
+  background: linear-gradient(-90deg, #FF79DA, #9356DC);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 20rem;
+  width: 100%;
+  height: 3rem;
+  transform-origin: left;
+  transform: scaleX(0.5);
+  animation: progress-bar 1000ms 150ms both;
+}
+
+.progress-after {
+  animation: progress-after 300ms 1300ms both;
+}
+
 header .fa-arrow-left {
   color: #353535;
   position: absolute;
@@ -314,7 +360,7 @@ article .button-restaurant button {
   padding: 1rem 2rem;
   margin: 1.5rem;
   border: none;
-  background: linear-gradient(-90deg, var(--c1, #ffdff6), var(--c2, #9356DC) 50%, var(--c1, #FF79DA)) var(--x, 0)/200%;
+  background: linear-gradient(329deg, var(--c1, #ffdff6), var(--c2, #9356DC) 70%, var(--c1, #FF79DA)) var(--x, 0)/400%;
   color: #fff;
   box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
   transition: 300ms;
@@ -327,43 +373,6 @@ article .button-restaurant button:hover {
 aside > img {
   width: 100%;
   object-fit: cover;
-}
-
-@keyframes progress-bar {
-  0% {
-    transform: scaleX(0);
-  }
-  17% {
-    transform: scaleX(0.18);
-  }
-  24% {
-    transform: scaleX(0.4);
-    animation-timing-function: cubic-bezier(0.9, 0, 0.1, 1);
-  }
-  46% {
-    transform: scaleX(0.81);
-    animation-timing-function: cubic-bezier(0.25, 0.25, 1);
-  }
-  100% {
-    transform: scaleX(1);
-  }
-}
-@keyframes progress-after {
-  0% {
-    transform: translateX(-9999px);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-.progress__bar {
-  transform-origin: left;
-  transform: scaleX(0.5);
-  animation: progress-bar 1000ms 150ms both;
-}
-
-.progress-after {
-  animation: progress-after 0ms 1300ms both;
 }
 
 * {
