Adding loading bar to main page

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,8 @@
 @import "./utils/variables";
 @import "./utils/responsive";
 @import "./utils/mixins";
+@import "./utils/keyframes";
+@import "./layout/loading\ bar";
 @import "./pages/header";
 @import "./pages/main";
 @import "./pages/footer";
