--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -17,3 +17,7 @@ $margin:1rem;
 $padding:1rem;
 
 $background-button: linear-gradient(329deg, var(--c1, lighten($secondary, 20%)), var(--c2, $primary) 70%, var(--c1, $secondary)) var(--x, 0)/ 400%;
+
+$prog-bar-dur: 1000ms;
+$prog-bar-delay: 150ms;
+$progress-after-delay: $prog-bar-dur + $prog-bar-delay*2;
