--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,55 @@
+@keyframes progress-bar {
+  0% {
+    transform: scaleX(0);
+  }
+  17% {
+    transform: scaleX(0.18);
+  }
+  24% {
+    transform: scaleX(0.4);
+    animation-timing-function: cubic-bezier(0.9, 0, 0.1, 1);
+  }
+  46% {
+    transform: scaleX(0.81);
+    animation-timing-function: cubic-bezier(0.25, 0, 0.25, 1);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+@keyframes progress-after {
+  0% {
+    transform: translateX(-9999px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+.progress {
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+.progress__bar {
+  border-radius: 2rem;
+  background: linear-gradient(-90deg, #FF79DA, #9356DC);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 5rem;
+  width: 80%;
+  height: 2rem;
+  transform-origin: left;
+  transform: scaleX(0.5);
+  animation: progress-bar 1000ms 150ms both;
+}
+
+.progress-after {
+  animation: progress-after 0ms 1300ms both;
+}
+
 header {
   padding: 1rem;
   display: flex;
@@ -185,52 +237,6 @@ footer p {
   color: #fff;
   margin: 0 0 1rem;
   font-size: 1.2rem;
-}
-
-@keyframes progress-bar {
-  0% {
-    transform: scaleX(0);
-  }
-  17% {
-    transform: scaleX(0.18);
-  }
-  24% {
-    transform: scaleX(0.4);
-    animation-timing-function: cubic-bezier(0.9, 0, 0.1, 1);
-  }
-  46% {
-    transform: scaleX(0.81);
-    animation-timing-function: cubic-bezier(0.25, 0.25, 1);
-  }
-  100% {
-    transform: scaleX(1);
-  }
-}
-@keyframes progress-after {
-  0% {
-    transform: translateX(-9999px);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-.progress__bar {
-  background: linear-gradient(-90deg, #FF79DA, #9356DC);
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 20rem;
-  width: 100%;
-  height: 3rem;
-  transform-origin: left;
-  transform: scaleX(0.5);
-  animation: progress-bar 1000ms 150ms both;
-}
-
-.progress-after {
-  animation: progress-after 300ms 1300ms both;
 }
 
 header .fa-arrow-left {
