Mixin pink button hover effect

--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -35,7 +35,7 @@
     & button{
         @include pink-button;
         &:hover{
-            --x:100%;
+            @include pink-button-hover;
         }
     }
 }
