--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -129,7 +129,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            padding: 1rem;
+            padding: 0.5rem;
             & h4{
                 margin: 0;
                 font-weight: 900;
@@ -144,5 +144,12 @@
                 padding: 0.5rem;
             }
         }
+    }
+
+    & :hover > i{
+        font-weight: bold;
+	    background: linear-gradient(to right, $secondary 0%, $primary 100%);
+	    -webkit-background-clip: text;
+	    -webkit-text-fill-color: transparent;
     }
 }
