--- a/sass/layout/_loading bar.scss
+++ b/sass/layout/_loading bar.scss
@@ -2,20 +2,19 @@
     display: flex;
     justify-content: center;
     overflow: hidden;
+    width: 100%;
     &__bar {
-        border-radius: 2rem;
+        border-radius: 10rem;
         background: linear-gradient(-90deg, $secondary, $primary);
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         position: absolute;
-        top: 5rem;
-        width: 80%;
-        height: 2rem;
-        transform-origin: left;
-        transform: scaleX(0.5);
-        animation: progress-bar $prog-bar-dur $prog-bar-delay both;
+        top: 20%;
+        width: 8rem;
+        height: 8rem;
+        animation: progress-bar $prog-bar-dur $prog-bar-delay ease-in-out;
     }
 }
 
