--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,20 +1,30 @@
 @keyframes progress-bar{
     0% {
-        transform: scaleX(0);
+        transform: rotate(0deg) scale(0.1);
     }
-    17% {
-        transform: scaleX(.18);
+    12%{
+        transform: rotate(45deg) scale(0.4);
     }
-    24% {
-        transform: scaleX(.40);
-        animation-timing-function: cubic-bezier(.9,0,.1,1);
+    25% {
+        transform: rotate(90deg) scale(0.7);
     }
-    46% {
-        transform: scaleX(.81);
-        animation-timing-function: cubic-bezier(.25,0,0.25,1);
+    37% {
+        transform: rotate(135deg) scale(1);
+    }
+    50% {
+        transform: rotate(180deg) scale(1.5);
+    }
+    62% {
+        transform: rotate(225deg) scale(3);
+    }
+    75% {
+        transform: rotate(270deg) scale(7);
+    }
+    87% {
+        transform: rotate(315deg) scale(50);
     }
     100% {
-        transform: scaleX(1);
+        transform: rotate(360deg, 0) scale(1000, 0);
     }
 }
 
