Adding fade in effect on restaurants page

--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -87,6 +87,12 @@
         display: flex;
         justify-content: flex-start;
     }
+    & :hover > button{
+        background-color: lighten($color: $primary, $amount: 35);
+        & i{
+            color: $primary;
+        }
+    }
 }
 
 .section-4{
