--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,8 @@
 @import "./utils/responsive";
 @import "./utils/mixins";
 @import "./utils/keyframes";
-@import "./layout/loading\ bar";
+@import "./layout/loading-bar";
+@import "./layout/fadeIn";
 @import "./pages/header";
 @import "./pages/main";
 @import "./pages/footer";
