--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,7 +11,9 @@ $hover-fonction-buttons: #f5edff;
 $logotitlefont:'Shrikhand', cursive;
 $mainfont:'Roboto', sans-serif;
 
-$box-shadow: 0 0.2rem 0.3rem rgb(0 0 0 / 30%)!default;
+$box-shadow: 0 0.2rem 0.3rem rgb(0 0 0 / 30%);
+
+$box-shadow-hover: 0 0.2rem 0.3rem rgb(0 0 0 / 70%);
 
 $margin:1rem;
 $padding:1rem;
