--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Keyframes landing page loading spinner */
 @keyframes progress-bar {
   0% {
     transform: rotate(0deg) scale(0.1);
@@ -35,6 +36,17 @@
     transform: translateX(0);
   }
 }
+/* Keyframes landing page loading spinner */
+/* Keyframes gradual loading menu pages */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(0, 100%, 0);
+  }
+  to {
+    opacity: 1;
+  }
+}
 .progress {
   display: flex;
   justify-content: center;
@@ -57,6 +69,22 @@
 
 .progress-after {
   animation: progress-after 0ms 1900ms both;
+}
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn ease-in 1;
+  animation-fill-mode: both;
+  animation-duration: 1s;
+}
+.fade-in.one {
+  animation-delay: 0.7s;
+}
+.fade-in.two {
+  animation-delay: 1.2s;
+}
+.fade-in.three {
+  animation-delay: 1.6s;
 }
 
 header {
@@ -113,6 +141,7 @@ header {
 .section-2 button:hover {
   --x:100%;
   color: #000;
+  box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.7);
 }
 
 .section-3 {
@@ -161,6 +190,12 @@ header {
   font-weight: 600;
   display: flex;
   justify-content: flex-start;
+}
+.section-3 :hover > button {
+  background-color: #f2eafb;
+}
+.section-3 :hover > button i {
+  color: #9356DC;
 }
 
 .section-4 {
@@ -401,6 +436,7 @@ article .button-restaurant button {
 article .button-restaurant button:hover {
   --x:100%;
   color: #000;
+  box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.7);
 }
 
 aside > img {
