--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,8 @@
 @import "./utils/mixins";
 @import "./utils/keyframes";
 @import "./layout/loading-bar";
-@import "./layout/fadeIn";
+@import "./layout/fade-in";
+@import "./layout/media-queries";
 @import "./pages/header";
 @import "./pages/main";
 @import "./pages/footer";
