--- a/sass/pages/_restaurants-pages.scss
+++ b/sass/pages/_restaurants-pages.scss
@@ -30,6 +30,9 @@ article{
             font-size: 1.5rem;
             line-height: 1.8rem;
             color: $grey-icons;
+            &:hover{
+                @include heart-fill;
+            }
         }
     }
     & h1{
